# eval

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  migrate.py  pyproject.toml  pytest.ini  requirements.txt  settings.py
core/: log_db.py  logging_config.py  logging_middleware.py  myworker.py  security_headers.py  utils.py  xss_sanitizer.py
models/: Enums.py  Job.py  RagDoc.py  Result.py  Upload.py  __init__.py
repository/: embeddings.py  extract_text.py  file.py  heuristics.py  llm_client.py  pipeline.py  prompts.py  rag.py  scoring.py
routes/: router.py
schemas/: common.py  schemas.py
